engine_c/state.h

#define MAX_PLAYERS         4
#define MAX_NODES           128
#define MAX_ZONE_SIZE       80
#define MAX_TROOP_SLOTS     8
#define MAX_PENDING_PROMO   16
#define MAX_SPY_SLOTS       4
typedef enum {
    PHASE_SETUP = 0, PHASE_DRAW, PHASE_MAIN,
    PHASE_END_OF_TURN, PHASE_CLEANUP, PHASE_GAME_OVER
} TurnPhase;
typedef enum {
    MOVE_PLAY_CARD = 0, MOVE_END_MAIN_PHASE, MOVE_RESOLVE_END_OF_TURN,
    MOVE_RESOLVE_CLEANUP, MOVE_ASSASSINATE, MOVE_DEPLOY, MOVE_RECRUIT,
    MOVE_RETURN_SPY, MOVE_ACTIVATE_ABILITY, MOVE_DECLINE_ABILITY,
    MOVE_PROMOTE_CARD, MOVE_SKIP_PROMOTE, MOVE_RESOLVE_GENERIC,
    MOVE_INITIAL_PLACEMENT, MOVE_COUNT
} MoveType;
typedef struct {
    Sym             catalog_id;
    Sym             version;
    CardDefinition *cards;
    int             card_count;
} CardCatalog;
typedef struct {
    Sym             board_id;
    NodeDefinition *nodes;
    int             node_count;
} BoardDefinition;
typedef struct {
    Sym            setup_id;
    DeckDefinition starter_deck;
    DeckDefinition market_deck;
    int            market_row_size;
} SetupDefinition;
typedef struct {
    Sym             definition_id;
    BoardDefinition board;
    CardCatalog     catalog;
    SetupDefinition setup;
    int             default_player_troops;
    int             default_player_spies;
} GameDefinition;
typedef struct {
    Sym  player_id;
    Sym  deck[MAX_ZONE_SIZE];
    int  deck_count;
    Sym  hand[MAX_ZONE_SIZE];
    int  hand_count;
    Sym  discard_pile[MAX_ZONE_SIZE];
    int  discard_pile_count;
    Sym  played_cards[MAX_ZONE_SIZE];
    int  played_cards_count;
    Sym  inner_circle[MAX_ZONE_SIZE];
    int  inner_circle_count;
    Sym  trophy_hall[MAX_ZONE_SIZE];
    int  trophy_hall_count;
    int  barracks;
    int  spies_available;
    int  vp_tokens;
    int  score;
    bool cow_dirty;
} PlayerState;
typedef struct {
    int power;
    int influence;
    bool cow_dirty;
} ResourcePool;
typedef struct {
    Sym  deck[MAX_ZONE_SIZE];
    int  deck_count;
    Sym  row[MAX_ZONE_SIZE];
    int  row_count;
    Sym  discard_pile[MAX_ZONE_SIZE];
    int  discard_pile_count;
    bool cow_dirty;
} MarketState;
typedef struct GameState {
    const GameDefinition *definition;

    NodeState  nodes[MAX_NODES];
    int        node_count;

    PlayerState players[MAX_PLAYERS];
    int         player_count;
    Sym         player_ids[MAX_PLAYERS];
    int         player_id_count;

    Sym       current_player_id;
    TurnPhase phase;
    int       round_number;

    ResourcePool resource_pool;
    MarketState  market;

    int final_score_keys[MAX_PLAYERS];
    int final_score_values[MAX_PLAYERS];
    int final_score_count;

    PendingAbilityState *pending_ability;

    PendingPromotionState pending_immediate[MAX_PENDING_PROMO];
    int                    pending_immediate_count;
    PendingPromotionState pending_eot[MAX_PENDING_PROMO];
    int                    pending_eot_count;

    PendingGenericChoiceState *pending_generic;

    Sym  devour_pile[MAX_ZONE_SIZE];
    int  devour_pile_count;

    Sym  setup_complete[MAX_PLAYERS];
    int  setup_complete_count;

    uint64_t shuffle_seed;
    int      shuffle_counter;

    void    *arena;
} GameState;
/* ---- Move Discriminated Union ---- */

typedef struct {
    MoveType type;
    union {
        struct { Sym card_id; int hand_index; } play_card;
        struct { int _pad; } end_main_phase;
        struct { int _pad; } resolve_end_of_turn;
        struct { int _pad; } resolve_cleanup;
        struct { Sym target_node_id; Sym troop_owner_id; int slot_index; } assassinate;
        struct { Sym node_id; int slot_index; } deploy;
        struct { Sym card_id; } recruit;
        struct { Sym node_id; Sym spy_owner_id; } return_spy;
        struct { Sym card_id; Sym ability_key; int discard_hand_indices[MAX_ABILITY_DISCARD]; int discard_hand_count; } activate_ability;
        struct { Sym card_id; Sym ability_key; } decline_ability;
        struct { Sym card_id; } promote_card;
        struct { int _pad; } skip_promote;
        struct { Sym action_id; Sym target_id; int selection_index; } resolve_generic;
        struct { Sym node_id; } initial_placement;
    } data;
    int player_index;
} Move;
/* ---- Player View Structures ---- */

typedef struct {
    Sym  node_id;
    int  troop_counts[MAX_PLAYERS];
    int  troop_owner_count;
    Sym  troop_owners[MAX_PLAYERS];
    int  white_troops;
    int  spy_owner_count;
    Sym  spy_owners[MAX_SPY_SLOTS];
    int  vp_tokens;
    bool controlled;
    Sym  controller_id;
} PublicNodeView;
typedef struct {
    Sym  ability_key;
    Sym  source_card_id;
    bool resolved;
} PublicPendingAbilityView;
typedef struct {
    Sym  card_id;
    bool is_optional;
    int  player_index;
} PublicPendingPromotionView;
typedef struct {
    Sym  source_card_id;
    int  player_index;
    bool is_pending;
} PublicPendingGenericChoiceView;
typedef struct {
    int          player_count;
    Sym          player_ids[MAX_PLAYERS];
    int          node_count;
    PublicNodeView nodes[MAX_NODES];
    int          round_number;
    TurnPhase    phase;
    Sym          current_player_id;
    ResourcePool resource_pool;
    MarketState  market;
    PublicPendingAbilityView     pending_ability;
    bool                         has_pending_ability;
    PublicPendingPromotionView   pending_immediate[MAX_PENDING_PROMO];
    int                          pending_immediate_count;
    PublicPendingGenericChoiceView pending_generic;
    bool                            has_pending_generic;
} PublicView;
typedef struct {
    PublicView   public_view;
    PlayerState  player;
    int          player_index;
} PrivateView;
GameState *engine_determinize(const GameState *src, Sym observing_player_id, uint64_t seed);