engine_c/intern.h

typedef uint32_t Sym;
void        intern_init(int capacity);
void        intern_destroy(void);
Sym         intern(const char *s);
const char *intern_str(Sym sym);