engine_c/bindings/engine_bindings.py


class PublicView(Structure):
    _fields_ = [
        ("player_count", c_int),
        ("player_ids", Sym * MAX_PLAYERS),
        ("node_count", c_int),
        ("nodes", type("_pnv", (Structure,), {"_fields_": [
            ("node_id", Sym),
            ("troop_counts", c_int * MAX_PLAYERS),
            ("troop_owner_count", c_int),
            ("troop_owners", Sym * MAX_PLAYERS),
            ("white_troops", c_int),
            ("spy_owner_count", c_int),
            ("spy_owners", Sym * MAX_SPY_SLOTS),
            ("vp_tokens", c_int),
            ("controlled", c_bool),
            ("controller_id", Sym),
        ]}) * MAX_NODES),
        ("round_number", c_int), ("phase", c_int),
        ("current_player_id", Sym),
        ("resource_pool", ResourcePool), ("market", MarketState),
        ("pending_ability", type("_pav", (Structure,), {"_fields_": [
            ("ability_key", Sym), ("source_card_id", Sym), ("resolved", c_bool),
        ]})),
        ("has_pending_ability", c_bool),
        ("pending_immediate", type("_ppv", (Structure,), {"_fields_": [
            ("card_id", Sym), ("is_optional", c_bool), ("player_index", c_int),
        ]}) * MAX_PENDING_PROMO),
        ("pending_immediate_count", c_int),
        ("pending_generic", type("_pgv", (Structure,), {"_fields_": [
            ("source_card_id", Sym), ("player_index", c_int), ("is_pending", c_bool),
        ]})),
        ("has_pending_generic", c_bool),
    ]

class PrivateView(Structure):
    _fields_ = [
        ("public_view", PublicView), ("player", PlayerState), ("player_index", c_int),
    ]


# ── CGameView structs ──────────────────────────────────────────────────────
class CPlayerZoneView(Structure):
    _fields_ = [
        ("hand", Sym * MAX_ZONE_SIZE), ("hand_count", c_int),
        ("discard", Sym * MAX_ZONE_SIZE), ("discard_count", c_int),
        ("played", Sym * MAX_ZONE_SIZE), ("played_count", c_int),
        ("inner_circle", Sym * MAX_ZONE_SIZE), ("inner_circle_count", c_int),
        ("trophy_hall", Sym * MAX_ZONE_SIZE), ("trophy_hall_count", c_int),
        ("barracks", c_int), ("spies_available", c_int),
        ("vp_tokens", c_int), ("score", c_int), ("deck_count", c_int),
    ]

class CNodeOccupancyView(Structure):
    _fields_ = [
        ("node_id", Sym), ("kind", c_int),
        ("adjacent_to", Sym * MAX_NODES), ("adjacent_count", c_int),
        ("control_vp", c_int), ("total_control_vp_per_turn", c_int),
        ("troop_slots", Sym * MAX_TROOP_SLOTS), ("troop_slot_count", c_int),
        ("spies", Sym * MAX_SPY_SLOTS), ("spy_count", c_int),
        ("vp_tokens", c_int),
    ]

class CGameView(Structure):
    _fields_ = [
        ("round_number", c_int), ("phase", c_int),
        ("current_player_id", Sym),
        ("players", CPlayerZoneView * MAX_PLAYERS), ("player_count", c_int),
        ("player_ids", Sym * MAX_PLAYERS),
        ("market_row", Sym * MAX_ZONE_SIZE), ("market_row_count", c_int),
        ("market_deck_count", c_int), ("market_discard_count", c_int),
        ("resource_power", c_int), ("resource_influence", c_int),
        ("devour_pile", Sym * MAX_ZONE_SIZE), ("devour_pile_count", c_int),
        ("nodes", CNodeOccupancyView * MAX_NODES), ("node_count", c_int),
        ("controlled_sites", c_int), ("total_control_sites", c_int),
        ("current_player_control_vp", c_int), ("current_player_total_control_vp", c_int),
        ("house_guard_remaining", c_int), ("priestess_remaining", c_int),
        ("insane_outcast_remaining", c_int),
    ]


# ── function signatures ───────────────────────────────────────────────────
def _setup():
    _lib.intern_init.argtypes = [c_int]
    _lib.intern_init.restype = None
    _lib.intern_destroy.argtypes = []
    _lib.intern_destroy.restype = None
    _lib.intern.argtypes = [c_char_p]
    _lib.intern.restype = Sym
    _lib.intern_str.argtypes = [Sym]
    _lib.intern_str.restype = c_char_p

    _lib.engine_load_definition_json.argtypes = [c_char_p, c_char_p, c_char_p, c_void_p]
    _lib.engine_load_definition_json.restype = POINTER(GameDefinition)
    _lib.engine_apply_setup_json.argtypes = [POINTER(GameDefinition), c_char_p, c_void_p]
    _lib.engine_apply_setup_json.restype = c_int
    _lib.engine_create_game_definition.argtypes = [
        POINTER(GameDefinition), POINTER(c_char_p), c_int, c_uint64]
    _lib.engine_create_game_definition.restype = POINTER(GameStateStruct)
    _lib.engine_clone.argtypes = [POINTER(GameStateStruct)]
    _lib.engine_clone.restype = POINTER(GameStateStruct)
    _lib.engine_destroy.argtypes = [POINTER(GameStateStruct)]
    _lib.engine_destroy.restype = None

    _lib.engine_legal_moves.argtypes = [POINTER(GameStateStruct), POINTER(Move), c_int]
    _lib.engine_legal_moves.restype = c_int
    _lib.engine_apply.argtypes = [POINTER(GameStateStruct), POINTER(Move)]
    _lib.engine_apply.restype = POINTER(GameStateStruct)
    _lib.engine_is_terminal.argtypes = [POINTER(GameStateStruct)]
    _lib.engine_is_terminal.restype = c_int
    _lib.engine_winner.argtypes = [POINTER(GameStateStruct), POINTER(c_int)]
    _lib.engine_winner.restype = Sym

    _lib.engine_public_view.argtypes = [POINTER(GameStateStruct), POINTER(PublicView)]
    _lib.engine_public_view.restype = None
    _lib.engine_private_view.argtypes = [POINTER(GameStateStruct), Sym, POINTER(PrivateView)]
    _lib.engine_private_view.restype = None

    _lib.register_default_effects.argtypes = []
    _lib.register_default_effects.restype = None

    _lib.arena_create.argtypes = [ctypes.c_size_t]
    _lib.arena_create.restype = c_void_p
    _lib.arena_destroy.argtypes = [c_void_p]
    _lib.arena_destroy.restype = None

    _lib.compute_final_scores.argtypes = [POINTER(GameStateStruct), POINTER(c_int)]
    _lib.compute_final_scores.restype = None

    _lib.set_game_over.argtypes = [POINTER(GameStateStruct)]
    _lib.set_game_over.restype = None
    _lib.advance_phase.argtypes = [POINTER(GameStateStruct)]
    _lib.advance_phase.restype = c_int

    _lib.engine_determinize.argtypes = [POINTER(GameStateStruct), Sym, c_uint64]
    _lib.engine_determinize.restype = POINTER(GameStateStruct)

    _lib.engine_build_view.argtypes = [POINTER(GameStateStruct), POINTER(CGameView)]
    _lib.engine_build_view.restype = None

    _lib.engine_describe_move.argtypes = [
        POINTER(GameStateStruct), POINTER(Move),
        POINTER(c_char_p), POINTER(c_char_p), c_int,
        c_char_p, c_int,
    ]
    _lib.engine_describe_move.restype = c_int

    _lib.engine_serialize_state.argtypes = [
        POINTER(GameStateStruct), c_char_p, c_char_p, c_char_p,
        c_int, c_int, c_char_p, c_int,
    ]
    _lib.engine_serialize_state.restype = c_int

    _lib.engine_deserialize_state.argtypes = [
        c_char_p, c_char_p, c_void_p, POINTER(c_int),
    ]
    _lib.engine_deserialize_state.restype = POINTER(GameStateStruct)


if _lib is not None:
    _setup()
